// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="custom CommentContent-root CommentContent-highlight"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Hello Bob, you <mark>bad</mark> guy",
    }
  }
/>
`;

exports[`renders correctly even if it has consecutive banned words on comments 1`] = `
<div
  className="custom CommentContent-root CommentContent-highlight"
  dangerouslySetInnerHTML={
    Object {
      "__html": "This is a very long comment with <mark>bad</mark> words. Let's try <mark>bad</mark> and <mark>bad</mark>. Now <mark>bad</mark> <mark>bad</mark>.
Bad BAD <mark>bad</mark>.
",
    }
  }
/>
`;

exports[`renders empty words correctly 1`] = `
<div
  className="custom CommentContent-root CommentContent-highlight"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Hello Bob, you bad guy",
    }
  }
/>
`;
